<resources>
    <string name="app_name">IntentsProj</string>
    <string name="no1">Number 1</string>
    <string name="no2">Number 2</string>
    <string name="non" />
    <string name="sum">+</string>
    <string name="min">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="helloWorld">Hello world</string>
    <string name="toastMessage">To</string>
    <string name="btn_cal">Calculator</string>
    <string name="cust_toast">Custom Toast</string>
</resources>
